Fix redbubble widget cropping

--- a/site/src/components/RedBubbleWidget/styles.module.scss
+++ b/site/src/components/RedBubbleWidget/styles.module.scss
@@ -47,7 +47,7 @@
 
     iframe {
       width: 990px;
-      height: 500px;
+      height: 450px;
 
       @include breakpoint("<=medium") {
         overflow: hidden;
